--- a/Gratsch Portfolio/Index.html
+++ b/Gratsch Portfolio/Index.html
@@ -12,5 +12,6 @@
 
     <a href="Projects.html" class="button">Projects</a>
     <a href="Designs.html" class="button">Designs</a>
+    <a href="https://github.com/GratschW/Portfolio.git" class="button">Portfolio Repository</a>
 </body>
 </html>
